<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>portifolio</artifactId>
  <build>
    <plugins>
      <plugin>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>
              <artifactId>lombok</artifactId>
              <groupId>org.projectlombok</groupId>
            </exclude>
          </excludes>
        </configuration>
        <groupId>org.springframework.boot</groupId>
      </plugin>
    </plugins>
  </build>
  <dependencies>
    <dependency>
      <artifactId>spring-boot-starter-validation</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-data-mongodb</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>

    <dependency>
      <artifactId>spring-boot-devtools</artifactId>
      <groupId>org.springframework.boot</groupId>
      <optional>true</optional>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-web</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-logging</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>hibernate-validator</artifactId>
      <groupId>org.hibernate.validator</groupId>
    </dependency>
    <dependency>
      <artifactId>logstash-logback-encoder</artifactId>
      <groupId>net.logstash.logback</groupId>
      <version>6.6</version>
    </dependency>
    <dependency>
      <artifactId>springfox-swagger2</artifactId>
      <groupId>io.springfox</groupId>
      <version>2.9.2</version>
    </dependency>
    <dependency>
      <artifactId>springfox-swagger-ui</artifactId>
      <groupId>io.springfox</groupId>
      <version>2.9.2</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-configuration-processor</artifactId>
      <groupId>org.springframework.boot</groupId>
      <version>2.5.5</version>
    </dependency>
    <dependency>
      <artifactId>validation-api</artifactId>
      <groupId>javax.validation</groupId>
      <version>2.0.1.Final</version>
    </dependency>
    <dependency>
      <artifactId>google-maps-services</artifactId>
      <groupId>com.google.maps</groupId>
      <version>1.0.0</version>
    </dependency>
  </dependencies>
  <description>portfolio</description>
  <groupId>br.com.amilton</groupId>
  <modelVersion>4.0.0</modelVersion>
  <name>portfolio</name>
  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>2.3.6.RELEASE</version> <!-- lookup parent from repository -->
  </parent>
  <pluginRepositories>
    <pluginRepository>
      <id>spring-milestones</id>
      <name>Spring Milestones</name>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <url>https://repo.spring.io/milestone</url>
    </pluginRepository>
  </pluginRepositories>

  <properties>
    <java.version>11</java.version>
  </properties>
  <repositories>
    <repository>
      <id>central</id>
      <layout>default</layout>
      <name>Central Repository</name>
      <snapshots>
        <enabled>false</enabled>
      </snapshots>
      <url>https://repo.maven.apache.org/maven2</url>
    </repository>
  </repositories>
  <version>0.0.1-SNAPSHOT</version>

</project>
